--- a/src/TechJobs/Views/List/Jobs.cshtml
+++ b/src/TechJobs/Views/List/Jobs.cshtml
@@ -2,6 +2,20 @@
 
 <h3>@ViewBag.jobs.Count Result(s)</h3>
 
-@{ 
-    // TODO #3 - Use the same list display from Views/Search/Index.cshtml 
+@{
+    // TODO #3 - Use the same list display from Views/Search/Index.cshtml
+    @foreach (Dictionary<string, string> job in ViewBag.jobs)
+    {
+        <table class="job-listing">
+            @foreach (KeyValuePair<string, string> column in job)
+            {
+                <tr>
+                    <td>@column.Key</td>
+                    <td>@column.Value</td>
+                </tr>
+
+            }
+        </table>
+
+    }
 }
